Fix admin and about buttons being cut off on startup

--- a/src/main/resources/DrawerStyle.css
+++ b/src/main/resources/DrawerStyle.css
@@ -13,6 +13,14 @@
     -fx-background-color: #FFFFFF;
 }
 
+.path-label {
+    -fx-background-color: rgba(66, 133, 244, 0.16);
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+    -fx-alignment: center;
+}
+
+
 .vbox {
     -fx-max-width: 418px;
     -fx-pref-width: 418px;
